# cg

./: .gitignore
animationsprojekt/: .clang-format  .gitignore  CMakeLists.txt
animationsprojekt/blender/: Campus.blend  Campus.blend1  HS3.blend  HS3.blend1  Hullin.blend  Hullin.blend1
animationsprojekt/doku/: GUI_und_Tastenbelegung.md  Konzept.md  Projektstruktur.md  credits.md
animationsprojekt/meshes/: Campus.mtl  HS3.mtl
animationsprojekt/shaders/: Scene2.frag  Scene2.vert  Scene3.frag  Scene3.vert  TMP_lambert.frag  TMP_projection.vert  _earth.frag  clouds.frag  earth.frag  earth.vert  gBuffer.frag  sc1_clouds.frag  sc1_clouds.vert  sc1_earth.frag  sc1_earth.vert  sc2_clouds.frag  scene03.frag  scene03.vert  ssao.frag  ssao.vert
animationsprojekt/src/: config.hpp.in  mainapp.cpp  mainapp.hpp  scenes.cpp
animationsprojekt/src/classes/: csv.cpp  csv.hpp  halfedge.cpp  halfedge.hpp  hermite.cpp  hermite.hpp  movable_camera.cpp  movable_camera.hpp  operations.cpp  operations.hpp
animationsprojekt/src/framework/: app.hpp  mesh.cpp  mesh.hpp  objparser.cpp  objparser.hpp
animationsprojekt/src/framework/gl/: program.hpp  texture.cpp
animationsprojekt/src/scenes/: scene.cpp  scene.hpp  scene01.cpp  scene02.cpp  scene03.cpp  test_scene.cpp
animationsprojekt/textures/: test.csv
cgintro-1/src/: aufgabe_1a.cpp  aufgabe_1b.cpp
cgintro-2-tutorial/: CMakeLists.txt
cgintro-2-tutorial/shaders/: colors.frag  colors.vert
cgintro-2-tutorial/src/: config.hpp.in  mainapp.cpp
cgintro-2a/: CMakeLists.txt
cgintro-2a/shaders/: transformation.vert  white.frag
cgintro-2a/src/: mainapp.cpp  mainapp.hpp
cgintro-2b/: CMakeLists.txt
cgintro-2b/shaders/: color.vert  hsv.frag
cgintro-2b/src/: mainapp.cpp  mainapp.hpp
cgintro-2b/src/framework/gl/: program.hpp
cgintro-3/: CMakeLists.txt
cgintro-3-tutorial/: CMakeLists.txt
cgintro-3-tutorial/shaders/: lambert.frag  projection.vert
cgintro-3-tutorial/src/: mainapp.cpp  mainapp.hpp
cgintro-3-tutorial/src/framework/: camera.hpp
cgintro-3/shaders/: color.frag  projection.vert
cgintro-3/src/: mainapp.cpp  mainapp.hpp
cgintro-4a/: .gitignore  CMakeLists.txt
cgintro-4a/shaders/: raymarch.frag
cgintro-4a/src/: mainapp.cpp  mainapp.hpp
cgintro-4b/: CMakeLists.txt
cgintro-4b/shaders/: raytrace.frag
cgintro-4b/src/: mainapp.cpp  mainapp.hpp
cgintro-4b/src/framework/: objparser.cpp
cgintro-5/: .gitignore  CMakeLists.txt
cgintro-5/.cache/clangd/index/: app.cpp.987776BEF3E78D58.idx  app.hpp.3B9E2E78A709BBC1.idx  buffer.cpp.7DA597EEE2A5DED4.idx  buffer.hpp.4D53E3B36AD367FF.idx  camera.cpp.23A7C43BA878608D.idx  camera.hpp.A717DF567C068B72.idx  common.cpp.5F0A41E9AB2A0FA0.idx  common.hpp.BB9BEDB7CC805959.idx  imguiutil.cpp.64BB659F08088FAA.idx  imguiutil.hpp.DDFAFF6756D465C9.idx  main.cpp.0FB1579E974510DF.idx  mainapp.cpp.A9F056B5BAC66101.idx  mainapp.hpp.F7F4CCD8E8415517.idx  mesh.cpp.EB4CA5C8C397C569.idx  mesh.hpp.58A11C4BEA4EC7F1.idx  objparser.cpp.090530B365260777.idx  objparser.hpp.E4C037E83EE7734C.idx  program.cpp.DE9E056CE0D4D002.idx  program.hpp.BC5BEDB88C14F23E.idx  query.cpp.F8BF35363C0F8AA7.idx  query.hpp.74259A54BC1BDD2C.idx  series.hpp.EDBD8268D4F30084.idx  shader.cpp.2BACE227C9C1E1D7.idx  shader.hpp.95CB0A9E58445BFD.idx  texture.cpp.81496AAEE76CC5E0.idx  texture.hpp.9426E5B1FAE16F0B.idx  vertexarray.cpp.4C021573BB6DFF6C.idx  vertexarray.hpp.867B9D9893365619.idx
cgintro-5/shaders/: lambert.frag
cgintro-5/src/: mainapp.cpp  mainapp.hpp
cgintro-6/: .gitignore  CMakeLists.txt  output.hdr
cgintro-6/src/: main.cpp
cgintro-7/: .gitignore  CMakeLists.txt
cgintro-7/shaders/: pbr.frag  projection.vert
cgintro-7/src/: mainapp.cpp  mainapp.hpp
src/: aufgabe_1a.cpp
